--- a/easyService/config/easyservice.conf
+++ b/easyService/config/easyservice.conf
@@ -1,8 +1,8 @@
 
 [program:cms]
-command=/home/web/venv/bin/gunicorn easyService.config.wsgi:application -c /home/web/easyService/CMS/config/gunicorn.conf.py
-directory=/home/web/CMS
+command=/home/web/venv/bin/gunicorn easyService.easyService.config.wsgi:application -c /home/web/easyService/easyService/config/gunicorn.conf.py
+directory=/home/web/easyService/easyService
 user=web
 autorestart=true
 redirect_stderr=true
-stdout_logfile = /home/web/easyService/logs/debug.log
+stdout_logfile = /home/web/easyService/easyService/logs/debug.log
