--- a/easyService/config/easyservice.conf
+++ b/easyService/config/easyservice.conf
@@ -1,6 +1,6 @@
 
 [program:cms]
-command=/home/web/venv/bin/gunicorn easyService.easyService.config.wsgi:application -c /home/web/easyService/easyService/config/gunicorn.conf.py
+command=/home/web/venv/bin/gunicorn easyService.easyService.easyService.config.wsgi:application -c /home/web/easyService/easyService/config/gunicorn.conf.py
 directory=/home/web/easyService/easyService
 user=web
 autorestart=true
